--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,9 @@ dependencies:
   flutter_bloc: ^8.1.2
   flutter_native_splash: ^2.2.17
   flutter_screenutil: ^5.6.1
+  flutter_svg: ^2.0.1
+  get: ^4.6.5
+  get_it: ^7.2.0
   image_picker: ^0.8.6+2
 
 dev_dependencies:
@@ -50,8 +53,7 @@ flutter_native_splash:
   color: "#F5F5F5"
   android_gravity: center
   android: true
-  ios: true      
-    
+  ios: true
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
